# pp-tools

./: .env.example  .gitignore  README.md  start-pp-tools.cmd
backend/: app.py  requirements.txt
companion/: __init__.py  build_companion.py  delta_companion.spec  pyproject.toml  requirements.txt  run_companion.py
companion/delta_companion/: __main__.py  app.py  codes.py  config.py  control_window.py  jobs.py  migration.py  pairing_store.py  paths.py  protocol.py  security.py  single_instance.py  store.py
companion/delta_companion/engine/: __init__.py  automate.py  classify.py  imgio.py  notify.py  ocr.py  parse.py
companion/delta_companion/routes/: __init__.py  calibration.py  health.py  lookup.py  pairing.py  players.py
companion/tests/: conftest.py  test_api_calibration.py  test_api_lookup.py  test_api_players.py  test_api_security.py  test_build_manifest.py  test_codes.py  test_control_window_model.py  test_engine_automation_contract.py  test_engine_lookup.py  test_engine_ocr.py  test_engine_parse.py  test_jobs.py  test_migration.py  test_pairing_store.py  test_paths.py  test_protocol.py  test_security.py  test_single_instance.py  test_source_inventory.py  test_store.py
companion/tests/fixtures/delta-samples/: ocr_result.json
docs/: delta-source-inventory.json
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.embed.config.js
scripts/: backup-data.ps1  backup_database.py  build_miniprogram_package.py  check-project.ps1  check_delta_companion.ps1  inventory_delta_source.py  start-local.ps1  sync_personal_site_embed.mjs  (+1 more)
(+116 files in other folders)
