[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pp-tools-delta-companion"
version = "1.0.0"
description = "Local runtime for Delta Stats"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["delta_companion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
